<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center_vertical">
  
  <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="0.5"
      android:textSize="25sp"
      android:text="@string/enterLocTag" />
  
  <MultiAutoCompleteTextView
      android:id="@+id/locField"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:ems="10"
      android:textSize="25sp"
      android:hint="@string/locTag" />

   <TextView
        android:id="@+id/textView3"
        android:textSize="25sp"    
        android:layout_width="wrap_content"
	    android:layout_height="0dp"
      	android:layout_weight="0.5"
        android:text="@string/selOrientation" />
 
  <Spinner
      android:id="@+id/orientation"      
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:textSize="25sp"
      android:entries="@array/orientations"
      android:prompt="@string/orientationsPrompt" />
    
  <TextView
      android:id="@+id/textView1"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:textSize="25sp"
      android:text="@string/chooseNumReadings" />
    
  <Spinner
      android:id="@+id/numReadings"
      android:entries="@array/numberOfReadings"
      android:prompt="@string/numberOfReadingsPrompt"
      android:textSize="25sp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"      
	 />
  
  <Button
      android:id="@+id/buttonScan"
      android:textSize="25sp"
      android:layout_width="fill_parent"
      android:text="@string/scanButtonText" 
      android:layout_height="0dp"
      android:layout_weight="2"
      />

</LinearLayout>
